get current user info and get by id
